--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "ansi-colors": "1.1.0",
+    "cors": "^2.8.5",
     "express": "4.16.3",
     "fancy-log": "1.3.2",
     "glob": "7.1.2",
